--- a/app/views/reports/reports_analysis.html.erb
+++ b/app/views/reports/reports_analysis.html.erb
@@ -163,7 +163,7 @@ var AnalysisChart = React.createClass({
               tickInterval: 0.5,
               title: {
                   enabled: true,
-                  text: 'Sweat Rate'
+                  text: 'Sweat Rate (L/hr)'
               }
          },
          title: {
