--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -241,6 +241,8 @@ var Form = React.createClass({
 
       var dist = ($('#distance').val() == "") ? 0 : $('#distance').val();
 
+     
+
       var speed = 0, pace = 0, pace_min = "00:00", pace_val = 0;
 
       if (dist != 0) {
@@ -259,7 +261,7 @@ var Form = React.createClass({
         pace_field['ss'] = "00";
       } else {
 
-        if (dist != 0) {
+        if (dist !=0) {
           if($activity.val() == 3) {
 
             pace_val = ( minutes / dist ),
@@ -274,6 +276,7 @@ var Form = React.createClass({
             pace_min = self.secondsToHms(pace).split(":");
           }
         }
+       
 
         state["pace"] = pace_val
 
@@ -292,6 +295,7 @@ var Form = React.createClass({
 
     var unit_name = this.props.units.name;
     var validation = {
+      
       weight: {
         Metric: {
           min: 25,
@@ -322,13 +326,28 @@ var Form = React.createClass({
 
     var temp_msg = validation.temp[unit_name].min + validation.temp[unit_name].unit + " to " + validation.temp[unit_name].max + validation.temp[unit_name].unit;
 
+    $.validator.addMethod("nonNegative", function(value, element) {
+
+      var nonNegative = false;        
+
+          if(value >= 0){
+            nonNegative = true;
+          }
+          return nonNegative;
+
+    },'Invalid. The value should be non negative');
+
+    $.validator.addClassRules("nonNegative", { nonNegative: true });
+
     $.validator.addMethod("weight", function(value, element) {
 
       var weight = false,
           min = validation.weight[unit_name].min,
           max = validation.weight[unit_name].max;
 
+
       if( value >= min && value <= max) {
+  
         weight = true;
       }
       return weight;
@@ -503,6 +522,8 @@ var Form = React.createClass({
         pace_state = this.state.pace_field;
 
     if (this.state.form_value.weight_before < this.state.form_value.weight_after) {
+
+   
       if ( confirm("Weight After is expected to be less than Weight Before even with hydration ")) {
         e.preventDefault();
         return false ;
@@ -510,7 +531,17 @@ var Form = React.createClass({
         e.preventDefault();
         return false ;
       }
-    }
+    }else if( this.state.form_value.weight_after < (this.state.form_value.weight_before)* 0.9 ){
+
+ 
+      if ( confirm("Weight loss greater than 10% appears too extreme.  Please check and revise Before and After weights ")) {
+        e.preventDefault();
+        return false ;
+      } else {
+        e.preventDefault();
+        return false ;
+      }
+    }else if( ( this.state.form_value.weight_after >= (this.state.form_value.weight_before)* 0.9) &&  (this.state.form_value.weight_after <= this.state.form_value.weight_before) ){    
 
     state['date'] = date_state.yy + "-" + date_state.mm + "-" + date_state.dd
     state['time'] = this.addTimeFormat(time_state)
@@ -523,6 +554,8 @@ var Form = React.createClass({
     var sports = this.props.selectedSports;
     if(sports.length > 1) {
       localStorage.setItem('setSports', state.activity);
+    }
+
     }
   },
   render() {
@@ -546,7 +579,7 @@ var Form = React.createClass({
 
           <Input type="text" name="duration" field_value={this.state.duration_field} value={this.state.form_value.duration} updateStateProp={this.updateState}  unit="clock-o" format="hh:mm:ss" placeholder="Duration ( HH : MM : SS )" triggerEvent={this.datetimepicker} onUpdateFieldValue={ this.updateFieldValue } klass="duration_field"/>
 
-          <Input type="text" name="distance" value={this.state.form_value.distance} updateStateProp={this.updateState} unit={this.props.units.distance} placeholder="Distance" required="required number"/>
+          <Input type="text" name="distance" value={this.state.form_value.distance} updateStateProp={this.updateState} unit={this.props.units.distance} placeholder="Distance" required="required number nonNegative"/>
 
           <SelectBox name="effort" options={this.props.effort} updateStateProp={this.updateState}  placeholder="Effort"/>
 
@@ -555,9 +588,9 @@ var Form = React.createClass({
           <Input type="text" name="pace" value={this.state.form_value.pace} field_value={this.state.pace_field} updateStateProp={this.updateState} klass="pace" unit={ this.state.pace_unit } onUpdateFieldValue={ this.updateFieldValue } placeholder="Pace ( MM : SS )"/>
 
           <Input type="text" name="temp_feels_like" value={this.state.form_value.temp_feels_like} updateStateProp={this.updateState} unit={this.props.units.temp} placeholder="Temp feels like" required="required number temp"/>
-          <Input type="text" name="weight_before" value={this.state.form_value.weight_before} updateStateProp={this.updateState} unit={this.props.units.weight} placeholder="Weight Before" required="required number weight"/>
-          <Input type="text" name="weight_after" value={this.state.form_value.weight_after} updateStateProp={this.updateState} unit={this.props.units.weight} placeholder="Weight After" required="required  number weight"/>
-          <Input type="text" name="hydration" value={this.state.form_value.hydration} updateStateProp={this.updateState} unit={this.props.units.hydration} placeholder="Hydration" required="required number"/>
+          <Input type="text" name="weight_before" value={this.state.form_value.weight_before} updateStateProp={this.updateState} unit={this.props.units.weight} placeholder="Weight Before" required="required number nonNegative weight "/>
+          <Input type="text" name="weight_after" value={this.state.form_value.weight_after} updateStateProp={this.updateState} unit={this.props.units.weight} placeholder="Weight After" required="required  number nonNegative weight "/>
+          <Input type="text" name="hydration" value={this.state.form_value.hydration} updateStateProp={this.updateState} unit={this.props.units.hydration} placeholder="Hydration" required="required number nonNegative"/>
           <Input type="text" name="notes" value={this.state.form_value.notes} updateStateProp={this.updateState} placeholder="Notes" />
         </div>
       </div>
